added links and images

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,17 @@ body {
     background: pink;
     text-align: center;
 }
+
+<style>
+.aligncenter {
+    text-align: center:
+}
+
+.webapp {
+    width: 700px;
+    height: auto;
+}
+</style>
+
+
+
