test webpage experiments
- trying to work out background images on the test webpage, will be moving to new branch, created new css stylesheet
- disconnected background image from main webpage

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ h2 {
 h3,
   .bio {
     color:indigo;
-    background-image: url("./images/moon-fancy.jpg");
+    /* background-image: url("./images/moon-fancy.jpg"); */
     background-size: cover;
     background-position: center;
 }
