--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ p {
 
 h1 {
    font: verdana;
+   background-color: indigo;
 }
 
 h2 {
@@ -29,6 +30,8 @@ h3,
     background-position: center;
 }
 
+#introduction {
+}
 
 .center-image {
     text-align: center;
