Started new test branch
Starting with a new format, based on boxmodel lesson.
- mostly just added html and css for main banner,
experimenting with what photo to use.

--- a/style_test.css
+++ b/style_test.css
@@ -1,12 +1,29 @@
-.body-background {
-    background-image: url("images/mountain-lake.png");
-    background-position: center;
-    width: cover;
-    size: auto;
-    font-family: Helvetica;
+body {
 }
 
-.white {
-    color:whitesmoke;
+.navigation {
 }
+
+#banner {
+    background-image: url("./images/moon-fancy-nbl.jpg");
+    background-size: cover;
+    background-position: bottom center;
+    height: 400px;
+    width: 100%;
+}
+
+#banner .content h1 {
+    position: relative;
+    top: 50px;
+    margin: 0 auto;
+}
+
+h1 {
+    color: white;
+    font-size: 42px;
+    font-weight: 600;
+    text-align: center;
+}
+
+
 
