--- a/style_test.css
+++ b/style_test.css
@@ -5,33 +5,37 @@ body {
 
 .navigation ul {
     margin: 0;
-    padding: 0;
+    padding: 5px;
     text-align: center;
 }
 
 .navigation li {
     font-weight: 100;
     letter-spacing: 2px;
+    padding: 2px;
 }
 
 #banner {
     background-image: url("./images/moon-fancy-nbl.jpg");
     background-size: cover;
     background-position: bottom center;
-    height: 300px;
+    height: 30%;
     width: 100%;
 }
 
 #banner .content h1 {
     position: relative;
     top: 50px;
+    width: 60%;
     margin: 0 auto;
+    border: 4px solid lightcyan;
+    border-radius: 15px;
 }
 
 h1 {
     color: lightcyan;
     font-size: 42px;
-    font-weight: 600;
+    font-weight: 400;
     text-align: center;
 }
 
@@ -39,18 +43,21 @@ h1 {
     position: relative;
     width: 600px;
     margin: 0 auto;
+    padding: 5px;
 
 }
 
 .project-nav ul {
     margin: 0;
-    padding: 0;
+    padding: 5px;
     text-align: center;
 }
 
 .project-nav li {
-    font-weight: 100;
+    font-size: medium;
+    font-weight: 400;
     letter-spacing: 2px;
+    padding: 2px;
 }
 
 
