--- a/style_test.css
+++ b/style_test.css
@@ -21,6 +21,7 @@ body {
     background-position: bottom center;
     height: 30%;
     width: 100%;
+    overflow: hidden;
 }
 
 #banner .content h1 {
