--- a/style_test.css
+++ b/style_test.css
@@ -32,6 +32,8 @@ body {
     margin: 0 auto;
     border: 4px solid lightcyan;
     border-radius: 15px;
+    background-color: black;
+    opacity: .8;
 }
 
 h1 {
