--- a/style_test.css
+++ b/style_test.css
@@ -5,18 +5,18 @@ body {
 
 
 
-.navigation ul {
+.offsite-nav ul {
     margin: 0;
-    padding: 5px;
+    padding: 1px;
     text-align: center;
     list-style-type: none;
 }
 
 
-.navigation li {
-    font-weight: 100;
+.offsite-nav li {
+    font-weight: 400;
     letter-spacing: 2px;
-    padding: 10px;
+    padding: 1px;
 }
 
 #banner {
@@ -85,6 +85,7 @@ a:hover {
     margin: 0;
     padding: 5px;
     text-align: center;
+    list-style-type: None;
 }
 
 .project-nav li {
